side extra space error solve

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,4 @@
-*{
-  font-family: var(--primary-font);
-}
+
 body{
   overflow-x: hidden !important;  
 }
